@startuml
class Command {
  +Execute(): virtual void = 0
}
class Invoker {
  -Command *cmd;
  +void initialize(Command *c);
  +StoreAndExecute(Command *command): void
}
class Receiver {
  +mandarCorreo(): void
  +enviarSms(): void
  +realizarLlamada(): void
}
class Cliente {
  -id: int
  -nombre: string
  -apellido: string
  -forma_de_contacto: string
  -correo: string
  -telefono: string
  -calle: string
  -numero: int
  -colonia: string
  +void setInfo()
  +void contactar()
  +Receiver *_receiver
  +Invoker *_invoker
}

class Tienda {
-static Tienda* instance;
-vector<Cliente*> list;
+static Tienda *getInstance()
+static Tienda *deleteInstance()
+void leerArchivo()
}

class MandarCorreo {
-Receiver * _receiver;
+void Execute()
}
class EnviarSMS {
-Receiver * _receiver;
+void Execute()

}
class RealizarLlamada {
-Receiver * _receiver;
+void Execute()

}

Invoker o-- Command
Command ^-- MandarCorreo
Command ^-- EnviarSMS
Command ^-- RealizarLlamada

MandarCorreo --> Receiver
EnviarSMS --> Receiver
RealizarLlamada --> Receiver

Cliente --> Receiver
Cliente --> Invoker
@enduml
